@@ -1,27 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST udev-init-scripts-26.tar.bz2 4921 SHA256 eff4cd581cb5d57a1fa09772f9f82a37d9a33a3828f0b7e988278a974864d203 SHA512 cbf5de51c7c1f63cfb7ded47175c3dfee0483972ce966d71bb164c78d6d6818d24a1e72cbaf9c3c0dda3674e6bb3b98c53a9e8cba27a8de6176689ddd39b0d9c WHIRLPOOL 6ade24698c8b1b1e7397f494e99e67e960505d846f21e8955e0a433dcde1d5ec5f580d13d867c78c13fc4157dbb532b0a5d4c1adedcda60f2e4186936a53b72a
 DIST udev-init-scripts-27.tar.bz2 3456 SHA256 1a091c361e9845861c138b505881edcb7b68fcf91708db526dff0b320243c936 SHA512 8a526d5252d54c724ad99250141d3ffddfbe6044ff9c9b9c02a4984f03ab6492a8b6a36022b93c7c06b0869b61a3c4dfa82fc47f560e927684fad636f56e4ba8 WHIRLPOOL 270a4ae1053a0303a851d6dcc5b51d2b89c5438b93f85dfb80726d11d61e950ae13e88b6063938f4ea8b49ae7167fb58211b6ce670f8d6c52212aed5da80b339
-EBUILD udev-init-scripts-26-r2.ebuild 2561 SHA256 6c8cbfd000580bd29de9880328ad04f2f9c68d959c083d8556ac4269f48b17a9 SHA512 8e498c61f9c0ada37bea748e4a6f9ce5f8a8329883c65b82625f8a13b182d7d54d56c37ca7ce6cd223e90a599bc421215cef83d067dd2ef958087500c0470f36 WHIRLPOOL 6feb2ff94424757e73575ea5f8186b8b10a42bf020e56d30627a00fe31047b0eaca1af897209bd849f84074210424ec0a558630016532e4113d88d35d15433cb
 EBUILD udev-init-scripts-27.ebuild 1925 SHA256 30bf636fd0d7fc21af8fb5f3a02075526f332974a0ea61d06073873fc904699a SHA512 557de6e1b7fbd2bd3237cd59fd271ed968a95b907387be54b9055e7b29c162c9049ac5ab24b46b139a1aca8d05050cb784e78a2fd910aecea475c50d4f71d2c6 WHIRLPOOL 49a33b7b615cc17b8d9b7517b412157a45d6440f2ccc11dbf783f0a89c016e938d0ff0883f6b91f72a0c34eb13e56b7b246f8049dc5248c01393ef999e135802
 EBUILD udev-init-scripts-9999.ebuild 2393 SHA256 75c5dca816fb1943ea862c506547eb1d859da60b77819c7d9720575c1d34ff83 SHA512 b58f80827eaa805318e274da9f68954ebf13770b27d6ac6e6bd1988546785d8786654d24940e68d6db2290257fb06448d78d4cb170af47dc788f7265b09d67db WHIRLPOOL bdb315d776d013069d62a3e8c058b4098529a33680c482ab25f327d6c0d7f1ac3dae1a33d47ccba7cf41ce9e83fe5ea7b212a9f853b97b01d3a5a28e8af49184
-MISC ChangeLog 17354 SHA256 9501deac5b455da6dde061e88a179610258ffeed65b2f2116eddf8a8bf49513f SHA512 0d8adb9b00871ec8a58e7e934fe583fd64a7d15a222c0f2f95dba09513dc4f86c010e3c4627575a5cf3685c20adf1d650215bc6e18be03603c5b3b719f75f162 WHIRLPOOL 6c132a18495560e03b586e3ad9b2802d9c8d760719d6002e37e87d9b0962b47c14136a40ed011be47dabebefdc6258631a6cb3424c5c9f9052e6992a310a9e0a
+MISC ChangeLog 17463 SHA256 aecc16cfa08996442b2b2df0cf6e1e5900f56c806f781caa4a944ba37fff79c5 SHA512 ce1c4aa9a835ee89f13ae1a7cb776c0fa99d7e36da8e349608a44259dafe80243adc469174f8cf6a74be4de740ff3ec11f4bc5c3b1c5225ee01aa2eb6536295c WHIRLPOOL 3fbd3602052a21a1b71eb3a18ec096ce3e0f2a3e4e3097e4a08402e5bae175017ed666f0b49603f89cd9821a82551473254819a3ee2f360f491c5f096288bed4
 MISC metadata.xml 206 SHA256 e8bae0ea2f16b0ad92858b68718c01ab85b5e6995a35b88c74e4ad9772b9f813 SHA512 f6558663be8014488111639a4eeadc9e691f57f2eb4f3c97d6022a50ab2659fac2df458cefed5e29a6661d59221b15332aefa00c027552a8f4bbefc3988e2a90 WHIRLPOOL b515e201c4f614326c4ee0ef0e13fd9d277e913d96265ecce11b41c9628fa38d1e34f90fab1073527e153a9e2e8929c5fee748a8e5eaf98b58fe15928c8ad457
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVBiArAAoJEA/daC2XTKcqiTIP/ikq6gZPqa5uqarAcm4x6uQp
-9LvYnpLgYwW3os/fIwKu89YAGdrwNleseIEcKE9aBy4k/NRTS6gAaSIdn4bu2Oez
-VR/bshOVG9PwLQG8G+WrxhfOGEv+NtnHZ+vls6DQM11Eiz1ymIOKQr+mF3BqB3gJ
-rtYdxyT1mC0+eFRBAAgY0vg2fObUpS9MnNO2SCRapRmfmjzPf9Zjpg/QP60vM871
-ZhsI/3JlTRAuOYeLslP/CF68v9hzVZo39zWg/BTERjrm90C4Uz+5D57wHXqN8VmP
-a2Zhe0NKpRKI7YkiEJS2XO4LO0RmI/6tmOSlUe79Oa09Y4TJtx0RjJK7c/4Ak/rn
-3iYZidxIzqJGfXg0uYd/x4iB8d2i055R3LrGAOrtkxbeombKcrok4yXwIXTptgSP
-evS8iS+Cy9voup64PhXYzKX06zFDglMnItDRmGIUEB1LV+tR/R5a7S2HasT6Z4Ca
-Kf8vYFq9Y62JoW3PEePPrvyarutduNB2GYJ/Y04nkDnHTnXB1dZvo2Vi4AoAe6fk
-szZWVfWu5PWShMJcXu4mB/wiQ9tc1+1Oou1qcCO6qis/MU1YP0EcefCHTDgdck0X
-s1zZ59y4RU/eXhWNsE9Q9HFR19VXuphmICsv3ESfMh01NGzB4PAIatJrg6efrG4+
-7r8JNY/10NMGxbAtgLym
-=C4Z+
+iEYEAREIAAYFAlUXDEgACgkQblQW9DDEZTjCHgCgkHq3gOZKmvbRov6lQ+3WBXes
+mAsAnRmTLiRbesBLLY4Xc4zFWjH5LDj9
+=xmr9
 -----END PGP SIGNATURE-----
